--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
             <img src="./imagens/galeria/imagem11.jpeg" alt="imagem11" id="img11"/>
             <img src="./imagens/galeria/imagem12.jpeg" alt="imagem12" id="img12"/>
             <img src="./imagens/galeria/imagem13.jpeg" alt="imagem13" id="img13"/>
-            <img src="./imagens/galeria/imagem14.jpg" alt="imagem14" id="img14"/>
-            <img src="./imagens/galeria/imagem15.jpg" alt="imagem15" id="img15"/>
-            <img src="./imagens/galeria/imagem16.jpg" alt="imagem16" id="img16"/>
-            <img src="./imagens/galeria/imagem17.jpg" alt="imagem17" id="img17"/>
-            <img src="./imagens/galeria/imagem18.jpg" alt="imagem18" id="img18"/>
+            <img src="./imagens/galeria/imagem14.png" alt="imagem14" id="img14"/>
+            <img src="./imagens/galeria/imagem15.png" alt="imagem15" id="img15"/>
+            <img src="./imagens/galeria/imagem16.png" alt="imagem16" id="img16"/>
+            <img src="./imagens/galeria/imagem17.png" alt="imagem17" id="img17"/>
+            <img src="./imagens/galeria/imagem18.png" alt="imagem18" id="img18"/>
           </div>
           <a class="btn-retorno"><img src="./imagens/botao-retorno.svg" alt="seta para esquerda"></a>
           <a class="btn-avanco"><img src="./imagens/botao-avanco.svg" alt="seta para direita"></a>
