--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
             <img src="./imagens/galeria/imagem16.jpeg" alt="imagem16" id="img16"/>
             <img src="./imagens/galeria/imagem17.jpeg" alt="imagem17" id="img17"/>
             <img src="./imagens/galeria/imagem18.jpeg" alt="imagem18" id="img18"/>
+            <img src="./imagens/galeria/imagem19.jpeg" alt="imagem18" id="img19"/>
+            <img src="./imagens/galeria/imagem20.jpeg" alt="imagem18" id="img20"/>
           </div>
           <a class="btn-retorno"><img src="./imagens/botao-retorno.svg" alt="seta para esquerda"></a>
           <a class="btn-avanco"><img src="./imagens/botao-avanco.svg" alt="seta para direita"></a>
