--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <img src="./imagens/galeria/imagem19.jpg" alt="imagem19" id="img19"/>
             <img src="./imagens/galeria/imagem20.jpg" alt="imagem20" id="img20"/>
             <img src="./imagens/galeria/imagem21.jpg" alt="imagem21" id="img20"/>
-            <img src="./imagens/galeria/imagem14.bmp" alt="imagem14" id="img14bmp"/>
+            <img src="./imagens/galeria/imagem22.bmp" alt="imagem22" id="img22"/>
           </div>
           <a class="btn-retorno"><img src="./imagens/botao-retorno.svg" alt="seta para esquerda"></a>
           <a class="btn-avanco"><img src="./imagens/botao-avanco.svg" alt="seta para direita"></a>
