--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             <img src="./imagens/galeria/imagem20.jpg" alt="imagem20" id="img20"/>
             <img src="./imagens/galeria/imagem21.jpg" alt="imagem21" id="img20"/>
             <img src="./imagens/galeria/imagem22.bmp" alt="imagem22" id="img22"/>
+            <img src="./imagens/galeria/imagem23.png" alt="imagem23" id="img23"/>
           </div>
           <a class="btn-retorno"><img src="./imagens/botao-retorno.svg" alt="seta para esquerda"></a>
           <a class="btn-avanco"><img src="./imagens/botao-avanco.svg" alt="seta para direita"></a>
