--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
         <div id="email">
           <img src="./imagens/email2.png" alt="simbolo de email" />
-          kevynsilva@gmail.com
+          silvakevyn920@gmail.com
         </div>
         <div id="midias-sociais">
           <a href="https://instagram.com/nyvek_arq?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==">
@@ -172,7 +172,7 @@
         </div>
       </div>
       <footer>
-         2023 © nivek
+         nivek©2023 
       </footer>
     </div>
   </body>
